--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Prachalitparate13.github.io",
+  "homepage": "http://Prachalitparate13.github.io/my-portfolio",
   "name": "my-portfolio",
   "version": "2.0.0",
   "private": true,
